[gd_scene load_steps=35 format=2]

[ext_resource path="res://fonts/Lucida Console.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/leaderboard_lucia.tres" type="DynamicFont" id=2]
[ext_resource path="res://icons/badges/64px/forge.png" type="Texture" id=3]
[ext_resource path="res://icons/badges/64px/turret.png" type="Texture" id=4]
[ext_resource path="res://icons/badges/64px/top50_s2.png" type="Texture" id=5]
[ext_resource path="res://icons/badges/64px/top50.png" type="Texture" id=6]
[ext_resource path="res://icons/badges/32px/top50.png" type="Texture" id=7]
[ext_resource path="res://icons/badges/32px/turret.png" type="Texture" id=8]
[ext_resource path="res://icons/badges/32px/top50_s2.png" type="Texture" id=9]
[ext_resource path="res://icons/badges/32px/forge.png" type="Texture" id=10]
[ext_resource path="res://icons/badges/64px/scooter.png" type="Texture" id=11]
[ext_resource path="res://icons/badges/32px/horsie.png" type="Texture" id=12]
[ext_resource path="res://icons/badges/32px/survival_s2.png" type="Texture" id=13]
[ext_resource path="res://icons/badges/64px/nutella.png" type="Texture" id=14]
[ext_resource path="res://icons/badges/64px/horsie.png" type="Texture" id=15]
[ext_resource path="res://icons/badges/64px/scooter_elite.png" type="Texture" id=16]
[ext_resource path="res://icons/badges/32px/nutella.png" type="Texture" id=17]
[ext_resource path="res://icons/badges/32px/scooter_elite.png" type="Texture" id=18]
[ext_resource path="res://icons/badges/32px/top10.png" type="Texture" id=19]
[ext_resource path="res://icons/badges/32px/survival.png" type="Texture" id=20]
[ext_resource path="res://icons/badges/32px/top10_s2.png" type="Texture" id=21]
[ext_resource path="res://icons/badges/32px/scooter.png" type="Texture" id=22]
[ext_resource path="res://icons/badges/32px/top25_s2.png" type="Texture" id=23]
[ext_resource path="res://icons/badges/32px/top25.png" type="Texture" id=24]
[ext_resource path="res://icons/badges/64px/survival.png" type="Texture" id=25]
[ext_resource path="res://icons/badges/64px/survival_s2.png" type="Texture" id=26]
[ext_resource path="res://icons/badges/64px/top10_s2.png" type="Texture" id=27]
[ext_resource path="res://icons/badges/64px/top25.png" type="Texture" id=28]
[ext_resource path="res://icons/badges/64px/top10.png" type="Texture" id=29]
[ext_resource path="res://icons/badges/64px/top25_s2.png" type="Texture" id=30]
[ext_resource path="res://LeaderboardEntry.gd" type="Script" id=31]
[ext_resource path="res://LeagueIcon.tscn" type="PackedScene" id=32]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.176471, 0.215686, 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[node name="LeaderboardEntry" type="Control"]
margin_top = 47.0
margin_right = 721.0
margin_bottom = 81.0
rect_min_size = Vector2( 0, 34 )
rect_clip_content = true
script = ExtResource( 31 )

[node name="Panel" type="Panel" parent="."]
margin_right = 721.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
margin_right = 721.0
margin_bottom = 34.0
custom_constants/separation = -3

[node name="Number" type="Label" parent="Panel/HBoxContainer"]
margin_top = 6.0
margin_right = 40.0
margin_bottom = 27.0
rect_min_size = Vector2( 40, 0 )
rect_clip_content = true
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.980392, 1, 1 )
text = "10"
align = 1
clip_text = true

[node name="Position" type="RichTextLabel" parent="Panel/HBoxContainer"]
margin_left = 37.0
margin_right = 167.0
margin_bottom = 34.0
rect_min_size = Vector2( 130, 0 )
size_flags_horizontal = 0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.678431, 0.976471, 1, 1 )
bbcode_enabled = true
bbcode_text = "#999([color=#99FF00]+999[/color])"
meta_underlined = false
tab_size = 1
text = "#999(+999)"
fit_content_height = true
scroll_active = false

[node name="League" type="Control" parent="Panel/HBoxContainer"]
margin_left = 164.0
margin_right = 198.0
margin_bottom = 34.0
rect_min_size = Vector2( 34, 34 )
size_flags_vertical = 5

[node name="Icon" parent="Panel/HBoxContainer/League" instance=ExtResource( 32 )]
rect_scale = Vector2( 0.3, 0.3 )

[node name="PlayerNameBar" type="Control" parent="Panel/HBoxContainer"]
margin_left = 195.0
margin_right = 555.0
margin_bottom = 34.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="PlayerName" type="Label" parent="Panel/HBoxContainer/PlayerNameBar"]
margin_left = 4.0
margin_top = 4.0
margin_right = 294.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
rect_clip_content = true
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.980392, 1, 1 )
text = "naturalhomemadenutella"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Badges" type="HBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 552.0
margin_right = 644.0
margin_bottom = 34.0
custom_constants/separation = -2

[node name="nutella2" type="TextureRect" parent="Panel/HBoxContainer/Badges"]
margin_right = 32.0
margin_bottom = 34.0
texture = ExtResource( 17 )

[node name="scooter_elite2" type="TextureRect" parent="Panel/HBoxContainer/Badges"]
margin_left = 30.0
margin_right = 62.0
margin_bottom = 34.0
texture = ExtResource( 18 )

[node name="survival2" type="TextureRect" parent="Panel/HBoxContainer/Badges"]
margin_left = 60.0
margin_right = 92.0
margin_bottom = 34.0
texture = ExtResource( 20 )

[node name="Value" type="Label" parent="Panel/HBoxContainer"]
margin_left = 641.0
margin_top = 6.0
margin_right = 721.0
margin_bottom = 27.0
rect_min_size = Vector2( 80, 0 )
rect_clip_content = true
size_flags_horizontal = 12
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.980392, 1, 1 )
text = "999999"
align = 1
clip_text = true

[node name="BadgesLarge" type="Control" parent="."]
visible = false
margin_right = 721.0
margin_bottom = 34.0

[node name="nutella" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 14 )

[node name="horsie" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 15 )

[node name="scooter" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 11 )

[node name="scooter_elite" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 16 )

[node name="survival" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 25 )

[node name="survival_s2" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 26 )

[node name="top10" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 29 )

[node name="top10_s2" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 27 )

[node name="top25" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 28 )

[node name="top25_s2" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 30 )

[node name="top50" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="top50_s2" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="turret" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="forge" type="TextureRect" parent="BadgesLarge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="BadgesSmall" type="Control" parent="."]
visible = false
margin_right = 721.0
margin_bottom = 34.0

[node name="nutella" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 17 )

[node name="horsie" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 12 )

[node name="scooter" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 22 )

[node name="scooter_elite" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 18 )

[node name="survival" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 20 )

[node name="survival_s2" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 13 )

[node name="top10" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 19 )

[node name="top10_s2" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 21 )

[node name="top25" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 24 )

[node name="top25_s2" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 23 )

[node name="top50" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="top50_s2" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 9 )

[node name="turret" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 8 )

[node name="forge" type="TextureRect" parent="BadgesSmall"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 10 )
